# krb2026b_ros2

./: .gitignore  README.md  pet_bottle_path.py  pet_bottle_test.py  swerve_can_test.py
script/: duck_detection.py  hz_check.py  nlp.py  pet_bottle_path.py  requirements.txt  rosbag_cutter.py  rosbag_record_bottle.sh  rosbag_record_duck.sh  rosbag_record_localization.sh  save_map.sh  speed_path_planner.py  trajectory.csv
src/behavior/krb2026b_behavior/: CMakeLists.txt  package.xml
src/behavior/krb2026b_behavior/include/krb2026b_behavior/: bottle_collector.hpp  duck_collector.hpp
src/behavior/krb2026b_behavior/src/: bottle_collector.cpp  duck_collector.cpp
src/detection/krb2026b_bottle_detection/: CMakeLists.txt  package.xml
src/detection/krb2026b_bottle_detection/include/krb2026b_bottle_detection/: bottle_detection.hpp
src/detection/krb2026b_bottle_detection/src/: bottle_detection.cpp
src/detection/krb2026b_duck_detection/: CMakeLists.txt  package.xml
src/detection/krb2026b_duck_detection/include/krb2026b_duck_detection/: duck_detection.hpp
src/detection/krb2026b_duck_detection/src/: duck_detection.cpp
src/launch/krb2026b_launch/: CMakeLists.txt  package.xml
src/launch/krb2026b_launch/config/: can.yaml  controller.yaml  controller_copy.yaml  joint_rule.yaml  lidar.yaml  lidar_front.yaml  lidar_left.yaml  lidar_rear.yaml  lidar_right.yaml  robot.yaml
src/launch/krb2026b_launch/launch/: cantest_launch.xml  common.launch.xml  control.launch.xml  detection.launch.xml  joint_debugger.launch.xml  krb2026b.launch.xml  manual_control.launch.xml  manual_planning.launch.xml  new_friend_3_auto.launch.xml  real.launch.xml  (+10 more)
(+46 files in other folders)
